# python_basic_homework

./: .gitignore
DjangoProject/: pyproject.toml
homework1/: README.md  phone_book.json  phonebook.py
homework10/: db.sqlite3  pyproject.toml  readme.md
homework10/config/: settings.py  urls.py
homework10/store_app/: forms.py  urls.py  views.py
homework10/store_app/templates/store_app/: about.html  index.html  menu.html  product_detail.html  product_list.html
homework10/store_app/tests/: conftest.py  test_forms.py  test_models.py  test_templates.py
homework11/: db.sqlite3  pyproject.toml  readme.md
homework11/config/: settings.py
homework11/store_app/: admin.py  forms.py  tasks.py  urls.py  views.py
homework11/store_app/management/commands/: generate_data.py
homework11/store_app/templates/store_app/: add_product.html  category_list.html  delete_product.html  edit_product.html  product_list.html
homework11/store_app/tests/: conftest.py  test_views.py
homework2/: README.md  controller.py  main.py  model.py  requirements.txt  test.py  view.py
homework3/: README.md  __init__.py  main.py
homework4/: README.md  app.py  books.json  (+1 more)
homework5/: Dockerfile  main.py  pyproject.toml  readme.md
homework6/: README.md  main.py  pyproject.toml
homework6/app/: __init__.py  config.py  db.py  fill_db.py  jsonplaceholder_requests.py  main.py  models.py
homework7/: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yaml  pyproject.toml
homework7/app/: .env.template  Dockerfile  alembic.ini  config.py  entrypoint.sh  main.py  run.sh
homework7/app/api/: __init__.py
homework7/app/api/auth/: __init__.py  dependencies.py  login.py
homework7/app/api/users/: __init__.py  crud.py  dependencies.py  views.py
homework7/app/core/: __init__.py  security.py
homework7/app/db/migrations/: env.py
homework7/app/db/migrations/versions/: 2025_04_13_1440-bb5ae5697a3d_create_tables.py
homework7/app/internal/: common.py
homework7/app/models/: __init__.py  base.py  user.py
homework7/app/schemas/: __init__.py  token.py  user.py
(+47 files in other folders)
