[project]
name = "homework10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "factory-boy>=3.3.3",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
]
