[project]
name = "homework11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "factory-boy>=3.3.3",
]

[dependency-groups]
test = [
    "beautifulsoup4>=4.13.4",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
]
