[tool.poetry]
name = "homework5"
version = "0.1.0"
description = ""
authors = ["alexandr <gorbenich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
