[tool.poetry]
name = "homework6"
version = "0.1.0"
description = ""
authors = ["alexandr <gorbenich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
aiohttp = "^3.11.16"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
